# ktfigure

./: .gitignore  LICENSE  MANIFEST.in  README.md  example_data.csv  generate_style_previews.py  pyproject.toml  test_images.py
.github/scripts/: generate_pr_screenshots.py
.github/workflows/: ci.yml  pr-comment.yml
src/ktfigure/: __init__.py
tests/: conftest.py  test_advanced.py  test_artboard.py  test_coverage_boost.py  test_coverage_final.py  test_coverage_gap.py  test_final_push.py  test_grid_snap.py  test_gui.py  test_last_mile.py  test_models.py  test_mouse_events.py  test_precision.py  test_renderer.py  test_zoom.py
