[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ktfigure"
version = "1.0.0"
description = "A GUI tool for researchers to create seaborn/matplotlib plots without any coding knowledge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kelvin Tuong", email = "z.tuong@uq.edu.au" }]
keywords = [
    "matplotlib",
    "seaborn",
    "plotting",
    "gui",
    "visualization",
    "research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ktfigure --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["ktfigure"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main",
]

[project.urls]
Homepage = "https://github.com/yourusername/ktfigure"
Documentation = "https://github.com/yourusername/ktfigure#readme"
Repository = "https://github.com/yourusername/ktfigure"
Issues = "https://github.com/yourusername/ktfigure/issues"

[project.scripts]
plot = "ktfigure:main"
ktfigure = "ktfigure:main"

[tool.setuptools]
packages = ["ktfigure"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
ktfigure = ["*.png"]
